log
Fri Mar 11 17:42:30 HSP 2022: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:81:12: error: unused variable 'ptrVector' [-Werror=unused-variable]
    Vector *ptrVector;
            ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
941689c
Fri Mar 11 17:43:51 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e2795dc
Fri Mar 11 17:49:13 HSP 2022: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:83:21: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    ptrVector->datos = n;
                     ^
exercises.c:85:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    ptrVector->capacidad = (int *) calloc(n, sizeof(int));
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
6b24f54
Fri Mar 11 17:49:50 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
81ae0a7
